Update: Edit mode changes
